# tonk

./: .actrc  .envrc  .gitignore  .prettierignore  .prettierrc.json  BUNDLE_IMPLEMENTATION_PLAN.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  P2P_ARCHITECTURE.md  PUBLISHING.md  README.md  RECIPE.md  TONK_FORMAT.md  biome.json  blank.tonk  bunfig.toml  conversation-summary.md  eslint.config.js  flake.nix  index.html  manifest.json  menu.nix  mprocs.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  projectSchema.backup.ts  railway.toml  rust-toolchain-nightly.toml  rust-toolchain.toml  setup-production.js  setup-staging.js  shell.nix  tsconfig.json  webpack.config.js
.cursor/rules/: node-async.mdc  tonk-docs.mdc  tonk-ui-styles.mdc
.github/workflows/: desktonk.yml  launcher-ci.yml  launcher.yml  mdbook.yml  publish-packages.yml  test-cli.yml  test.yml
.husky/: pre-commit
.oracle/core-slim-resolution/: core-slim-resolution-synthesis.md  delphi-core-slim-resolution-1.md  delphi-core-slim-resolution-2.md  delphi-core-slim-resolution-3.md
.oracle/pr-rebase/: delphi-pr-rebase-1.md  delphi-pr-rebase-2.md  delphi-pr-rebase-3.md  pr-rebase-synthesis.md
.oracle/pr346-rebase/: delphi-pr346-rebase-1.md  delphi-pr346-rebase-2.md  delphi-pr346-rebase-3.md  pr346-rebase-synthesis.md
.zed/: settings.json
docs/: book.toml
docs/plans/: 2025-11-07-vfs-zustand-integration-design.md  2025-11-07-vfs-zustand-integration.md
docs/src/: SUMMARY.md  architecture.md  bundles.md  deployment.md  introduction.md  keepsync.md  overview.md  quickstart.md  reference.md  tonk.md  vfs.md  vibe-coding.md  workers.md
examples/berlin/: CSS_REFACTOR_SUMMARY.md  bundling.tonk
examples/bundling/: .gitignore  package.json  tsconfig.json
examples/demo/: README.md  app.tonk  bundling.tonk  demo.tonk  mprocs.yaml  package.json
examples/desktonk/: .gitignore  MIME_DETECTION_TEST.md  README.md  app.tonk  mprocs.yaml
examples/file-browser/: .cursorrules  .env.example  .gitignore  CLAUDE.md  index.html  llms-custom.txt  llms.txt  package.json  pnpm-lock.yaml  projectSchema.ts  tonk.config.json  vite.config.ts  vite.config.ts.timestamp-1752677643115-a4d618687b393.mjs
examples/google-maps-locations-worker/: .env.example  .gitignore  README.md  nodemon.json  package.json  pnpm-lock.yaml  tonk-google-maps-locations-worker-1.0.0.tgz  tonk.config.json  worker.config.js
examples/latergram/: .env.example  CLAUDE.md  TONK_STORE_PROMPT.md  base.tonk  index.html  mprocs.yaml  package.json  pnpm-lock.yaml  test-tonk-validation.ts  tonk.config.json  tsconfig.json  tsconfig.sw.json  vite.config.ts
examples/my-world/: CLAUDE.md  Dockerfile  fly.toml  index.html  llms-custom.txt  llms.txt  package.json  pnpm-lock.yaml  tinyfoot.config.json  tonk.config.json  tsconfig.json  vite.config.js  webpack.config.cjs
examples/orchestration/: .env.example  orchestrator.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  workflow.ts
examples/store-viewer/: .windsurfrules  CLAUDE.md  README.md  llms-custom.txt  llms.txt  (+6 more)
notes/: Share Sprint.md  service-worker-vfs-cleanup-plan.md  vfs-service-worker-auth-architecture.md
public/: index.html
rust/tonk-space/: Cargo.toml
rust/tonk-space/src/: delegation.rs  lib.rs  operator.rs  ownership.rs  relation.rs  schema.rs  secret.rs  space.rs
rust/tonk-space/src/schema/: space.rs  ucan.rs
scripts/: bump-version.js  bundle-tonk-app.ts  clean-generated-files.js  install.sh  package.json  pnpm-lock.yaml  websocket-test.js
src/: App.tsx  index.js  index.tsx
tests/: .gitignore  .relay-binary  .rsyncignore  BUNDLE_IMPLEMENTATION.md  DISTRIBUTED_IMPLEMENTATION_SUMMARY.md  DISTRIBUTED_LOAD_TESTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  PRE_FLIGHT_CHECKLIST.md  QUICKSTART_DISTRIBUTED.md  READINESS_SIGNALING_PLAN.md  README.md  README_DISTRIBUTED.md  UPTIME_TESTS.md  global-setup.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vite.sw.config.ts
utils/: copy-llms.js  distribute-from-docs.js  file-mapping.js  test-distribution.js  validate-sync.js
(+757 files in other folders)
