[workspace]
members = ["packages/cli", "packages/core", "packages/relay", "packages/space", "packages/ucan-access"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Tonk Labs"]
license = "MIT"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
opt-level = "s"
debug = 0
inherits = "release"
strip = "debuginfo"

[workspace.dependencies]
ucan = { git = "https://github.com/ucan-wg/rs-ucan.git", branch = "main", package = "ucan" }
varsig = { git = "https://github.com/ucan-wg/rs-ucan.git", branch = "main", package = "varsig" }

# Dialog DB
dialog-storage = { git = "https://github.com/dialog-db/dialog-db.git", branch = "tonk" }
dialog-query = { git = "https://github.com/dialog-db/dialog-db.git", branch = "tonk" }
dialog-artifacts = { git = "https://github.com/dialog-db/dialog-db.git", branch = "tonk" }
dialog-common = { git = "https://github.com/dialog-db/dialog-db.git", branch = "tonk" }
