[workspace]
members = ["rust/tonk-core", "rust/tonk-space"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Tonk Labs"]
license = "MIT"
edition = "2024"

[workspace.dependencies]
tonk-core = { path = "./rust/tonk-core" }
tonk-space = { path = "./rust/tonk-space" }

# Dialog DB
dialog-storage = { git = "https://github.com/dialog-db/dialog-db.git", branch = "tonk-ecs" }
dialog-query = { git = "https://github.com/dialog-db/dialog-db.git", branch = "tonk-ecs" }
dialog-artifacts = { git = "https://github.com/dialog-db/dialog-db.git", branch = "tonk-ecs" }
dialog-common = { git = "https://github.com/dialog-db/dialog-db.git", branch = "tonk-ecs" }

# UCAN
ucan = { git = "https://github.com/Gozala/rs-ucan.git", branch = "fix/wasm-compile", package = "ucan" }
varsig = { git = "https://github.com/Gozala/rs-ucan.git", branch = "fix/wasm-compile", package = "varsig" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
opt-level = "s"
debug = 0
inherits = "release"
strip = "debuginfo"
